--- a/methods/index.html
+++ b/methods/index.html
@@ -1,5 +1,9 @@
-gg
-get
-test
-
-kk
+<!DOCTYPE html>
+<html lang="en">
+		<body>
+			<a href='./.DS_Store'>.DS_Store</a><br /><br />
+			<a href='./palindorm.c'>palindorm.c</a><br /><br />
+			<a href='./twosum.c'>twosum.c</a><br /><br />
+			<a href='./a.out'>a.out</a><br /><br />
+		</body>
+</html>
