last -1 test nxalah

--- a/error_pages/301.html
+++ b/error_pages/301.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="301">
                301
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Opps! Moved Permanently">
+               Opps! Moved Permanently
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, Moved Permanently.
             </p>
             </div>
          </div>
