--- a/error_pages/400.html
+++ b/error_pages/400.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="400">
                400
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Opps! Bad Request">
+               Opps! Bad Request
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, Bad Request.
             </p>
             </div>
          </div>
