--- a/error_pages/403.html
+++ b/error_pages/403.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="403">
                403
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Opps! Forbidden">
+               Opps! Forbidden
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, Forbidden.
             </p>
             </div>
          </div>
