--- a/error_pages/405.html
+++ b/error_pages/405.html
@@ -99,8 +99,8 @@ body{
             <h2 class="header" data-text="405">
                405
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Opps! Method Not Allowed">
+               Opps! Method Not Allowed
             </h4>
             <p>
                Sorry, the page you're looking for doesn't exist.
