--- a/error_pages/201.html
+++ b/error_pages/201.html
@@ -90,20 +90,20 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>201 Error Page</title>
+      <title>201 Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
-      <div id="error-page">
+      <div id="page">
          <div class="content">
             <h2 class="header" data-text="201">
                201
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Created">
+              Created .
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+              Created .
             </p>
             </div>
          </div>
