--- a/error_pages/204.html
+++ b/error_pages/204.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="204">
                204
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="No Content">
+              No Content
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, No Content.
             </p>
             </div>
          </div>
