--- a/error_pages/409.html
+++ b/error_pages/409.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="409">
                409
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Opps! Conflict">
+               Opps! Conflict
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, Conflict.
             </p>
             </div>
          </div>
