--- a/error_pages/413.html
+++ b/error_pages/413.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="413">
                413
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Opps! Request Entity Too Large">
+               Opps! Request Entity Too Large
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, Request Entity Too Large.
             </p>
             </div>
          </div>
