--- a/error_pages/414.html
+++ b/error_pages/414.html
@@ -99,11 +99,11 @@ body{
             <h2 class="header" data-text="414">
                414
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Request-URI Too Long">
+               Request-URI Too Long
             </h4>
             <p>
-               Sorry, the page you're looking for doesn't exist.
+               Sorry, Request-URI Too Long.
             </p>
             </div>
          </div>
