--- a/error_pages/201.html
+++ b/error_pages/201.html
@@ -14,7 +14,7 @@ body{
   background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
   background-size: 400%;
 }
-#error-page{
+#status-page{
   position: absolute;
   top: 10%;
   left: 15%;
@@ -26,7 +26,7 @@ body{
   background: #fff;
   box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
-#error-page .content{
+#status-page .content{
   max-width: 600px;
   text-align: center;
 }
@@ -90,21 +90,19 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>201 Error Page</title>
+      <title>204 Error Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
-      <div id="error-page">
+      <div id="status-page">
          <div class="content">
-            <h2 class="header" data-text="201">
-               201
+            <h2 class="header" data-text="204">
+               204
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data>
+               Ops! Page not found
             </h4>
-            <p>
-               Sorry, the page you're looking for doesn't exist.
-            </p>
+            
             </div>
          </div>
       </div>
