--- a/error_pages/501.html
+++ b/error_pages/501.html
@@ -99,12 +99,10 @@ body{
             <h2 class="header" data-text="501">
                501
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Not Implemented">
+               Not Implemented
             </h4>
-            <p>
-               Sorry, the page you're looking for doesn't exist.
-            </p>
+            
             </div>
          </div>
       </div>
