--- a/error_pages/408.html
+++ b/error_pages/408.html
@@ -90,17 +90,17 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>201 Error Page</title>
+      <title>408 Error Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
       <div id="status-page">
          <div class="content">
-            <h2 class="header" data-text="201">
-               201
+            <h2 class="header" data-text="408">
+               408
             </h2>
-            <h4 data>
-               Ops! Page not found
+            <h4 data-text=" Request Timeout">
+                Request Timeout
             </h4>
             
             </div>
