--- a/status_pages/204.html
+++ b/status_pages/204.html
@@ -90,7 +90,7 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>204 Error Page</title>
+      <title>204 Status Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
