--- a/status_pages/404.html
+++ b/status_pages/404.html
@@ -90,17 +90,17 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>301 Error Page</title>
+      <title>404 Status Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
       <div id="status-page">
          <div class="content">
-            <h2 class="header" data-text="301">
-               301
+            <h2 class="header" data-text="404">
+               404
             </h2>
-            <h4 data-text="Moved Permanently">
-               Moved Permanently
+            <h4 data-text="Not Found">
+               Not Found
             </h4>
             
             </div>
