--- a/status_pages/403.html
+++ b/status_pages/403.html
@@ -90,17 +90,17 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>400 Error Page</title>
+      <title>403 Status Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
       <div id="status-page">
          <div class="content">
-            <h2 class="header" data-text="400">
-               400
+            <h2 class="header" data-text="403">
+               403
             </h2>
-            <h4 data-text="Bad Request">
-              Bad Request
+            <h4 data-text="Forbidden">
+               Forbidden
             </h4>
             
             </div>
