--- a/status_pages/413.html
+++ b/status_pages/413.html
@@ -90,17 +90,17 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>408 Error Page</title>
+      <title>413 Status Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
       <div id="status-page">
          <div class="content">
-            <h2 class="header" data-text="408">
-               408
+            <h2 class="header" data-text="413">
+               413
             </h2>
-            <h4 data-text=" Request Timeout">
-                Request Timeout
+            <h4 data-text="413 Request Entity Too Large">
+              413 Request Entity Too Large
             </h4>
             
             </div>
