--- a/status_pages/414.html
+++ b/status_pages/414.html
@@ -90,17 +90,17 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>413 Error Page</title>
+      <title>414 Status Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
       <div id="status-page">
          <div class="content">
-            <h2 class="header" data-text="413">
-               413
+            <h2 class="header" data-text="414">
+               414
             </h2>
-            <h4 data-text="Opps! Page not found">
-               Opps! Page not found
+            <h4 data-text="Request-URI Too Long">
+                Request-URI Too Long
             </h4>
             
             </div>
