--- a/cgi/index.html
+++ b/cgi/index.html
@@ -10,5 +10,14 @@
     <h1>
         Hello world
     </h1>
+
+
+    <form method="GET" action="./index.php">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="hello"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="hello2"><br><br>
+        <input type="submit" value="Submit">
+      </form> 
 </body>
 </html> 
