--- a/status_pages/408.html
+++ b/status_pages/408.html
@@ -90,7 +90,7 @@ body{
 }
    </style>
       <meta charset="utf-8">
-      <title>408 Status Page</title>
+      <title>408 Error Page</title>
       <!-- <link rel="stylesheet" href="css/style.css"> -->
    </head>
    <body>
@@ -99,7 +99,7 @@ body{
             <h2 class="header" data-text="408">
                408
             </h2>
-            <h4 data-text="Request Timeout">
+            <h4 data-text=" Request Timeout">
                 Request Timeout
             </h4>
             
